added some swag tbh

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LAsaaagga</title>
 </head>
 <body>
-    <!-- STUFF GOES HERE -->
+    <h1>Lasagna</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" height="600" width="250">
+    <p>This is someone's mom's homemade lasagna it looks pretty good I'd say</p>
+
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>MEAT</li>
+        <li>Onion</li>
+        <li>Canned tomattoes</li>
+        <li>fresh yerbs</li>
+        <li>sugar</li>
+        <li>spices n seazng</li>
+        <li>nodels</li>
+        <li>Cheese</li>
+        <li>Eggz</li>
+    </ul>
+
+    <h3>Steps</h3>
+        <ol>
+            <li>Cooka da meata</li>
+            <li>Cooka da noodleasz</li>
+            <li>Maka da cheesea layera</li>
+            <li>Assembla da lasaga</li>
+            <li>Bake  the lasgzxcnga</li>
+        </ol>
+    <a href="../index.html">RETURN</a>
 </body>
 
 </html>
