--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rurscipe ePAge</title>
 </head>
 <body>
-    <h1>Odin Recipes
+    <h1>Odin Recipes</h1>
+        <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/macncheese.html">MAC AND CHEECE</a></li>
+        <li><a href="./recipes/custard.html">MUSTASRD</a></li>
+        </ul>
 </body>
 
 </html>
